tests/negative/neg_pr1111c_ada_generic_keyword.safe
package neg_pr1111c_ada_generic_keyword

   generic
      type t is private

   function identity (value : t) returns t

